<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="text_create_account">No tienes cuenta? Registrate aquí</string>
    <string name="text_go_login">Ya tiene cuenta? Inicie sesión</string>
    <string name="btn_signup">Registrarme</string>
    <string name="btn_entrar">Iniciar Sesión</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="resgitro_name">Regístrate</string>
    <string name="inicio_name">Iniciar Sesión</string>
    <string name="title_activity_dashboard">Twitter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toolbar_title_home">Inicio</string>
    <string name="hint_mensaje_nuevo_tweet">¿Qué estas Pensando?</string>
</resources>
