<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".ui.auth.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/resgitro_name"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo_minitwitter_white"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/btn_signup"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/textViewGoLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewGoLogin"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/text_go_login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>